force-app/main/default/objects/CopilotAnalyticsCalculator__dlm/fields/BotId__c.field-meta.xml
<CustomField>
    <fullName>BotId__c</fullName>
    <label>Bot ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BotId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>