force-app/main/default/objects/CopilotAnalyticsCalculator__dlm/fields/GroupByField1__c.field-meta.xml
<CustomField>
    <fullName>GroupByField1__c</fullName>
    <label>Group By Field 1</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GroupByField1</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>