force-app/main/default/objects/CopilotAnalyticsCalculator__dlm/fields/GroupByField2__c.field-meta.xml
<CustomField>
    <fullName>GroupByField2__c</fullName>
    <label>Group By Field 2</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GroupByField2</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>