force-app/main/default/objects/CopilotAnalyticsCalculator__dlm/fields/GroupByValue3__c.field-meta.xml
<CustomField>
    <fullName>GroupByValue3__c</fullName>
    <label>Group By Value 3</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GroupByValue3</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>