force-app/main/default/objects/CopilotAnalyticsCalculator__dlm/fields/KQ_MetricId__c.field-meta.xml
<CustomField>
    <fullName>KQ_MetricId__c</fullName>
    <label>Key Qualifier Metric ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_MetricId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>