force-app/main/default/objects/CopilotAnalyticsCalculator__dlm/fields/MetricId__c.field-meta.xml
<CustomField>
    <fullName>MetricId__c</fullName>
    <label>Metric ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <primaryIndexOrder>1</primaryIndexOrder>
        <refAttrDeveloperName>MetricId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>