force-app/main/default/objects/CopilotAnalyticsCalculator__dlm/fields/MetricKey__c.field-meta.xml
<CustomField>
    <fullName>MetricKey__c</fullName>
    <label>Metric Key</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MetricKey</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>