force-app/main/default/objects/CopilotAnalyticsCalculator__dlm/fields/MetricValue__c.field-meta.xml
<CustomField>
    <fullName>MetricValue__c</fullName>
    <label>Metric Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MetricValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>